--- a/templates/blog/user_detail.html
+++ b/templates/blog/user_detail.html
@@ -15,7 +15,7 @@
     <li><h4>Title: <a href="{% url 'post_detail' post.id %}">{{ post.title }}</a> </h4></li>
     <h5>Short description: {{ post.short_description }} </h5>
     {% if self_posts %}
-    <a href="#X"> <button class="btn btn-xs btn-danger">Delete post</button></a>
+    <a href="{% url 'post_delete' post.id %}"> <button class="btn btn-xs btn-danger">Delete post</button></a>
     {% endif %}
 {% empty %}
     <li>No posts yet.</li>
