--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -1,5 +1,17 @@
 {% extends "main.html" %}
 
+{% block side-menu %}
+    <li><a href="{% url 'post_list' %}">Blog's posts</a></li>
+    {% if request.user.is_authenticated %}
+        <li><a href="{% url 'post_create' %}">Create new post</a></li>
+        <li><a href="{% url 'user_detail' request.user.id %}">Profile</a></li>
+        <li><a href="{% url 'logout' %}">Log-out</a></li>
+    {% else %}
+        <li><a href="{% url 'registration' %}">Registration</a></li>
+        <li><a href="{% url 'login' %}">Login</a></li>
+    {% endif %}
+{% endblock %}
+
 {% block content %}
 
 <h3>Title: {{ post.title }}</h3>
@@ -11,13 +23,13 @@
 
 <h4>Leave a Comment:</h4>
 <form method="post">
-        {% csrf_token %}
-        <table>
-          {{ form.as_table }}
-        </table>
-        <button type="submit" class="btn btn-success">Submit</button>
-    </form>
-      <br><br>
+    {% csrf_token %}
+    <table>
+      {{ form.as_table }}
+    </table>
+    <button type="submit" class="btn btn-success">Submit</button>
+</form>
+<br><br>
 
 
 <h3>Comments</h3>
