--- a/templates/blog/user_detail.html
+++ b/templates/blog/user_detail.html
@@ -24,7 +24,7 @@
 <h2>User's posts:</h2>
 <ul>
 {% for post in page_obj %}
-    <li><h4>Title: <a href="{% url 'post_detail' post.id %}">{{ post.title }}</a> </h4></li>
+    <li><h4>Title: <a href="{% url 'post_detail' post.slug %}">{{ post.title }}</a> </h4></li>
     <h5>Short description: {{ post.short_description }} </h5>
     {% if self_posts %}
     <a href="{% url 'post_delete' post.id %}"> <button class="btn btn-xs btn-danger">Delete post</button></a>
