--- a/templates/registration/update_user.html
+++ b/templates/registration/update_user.html
@@ -1,5 +1,18 @@
 {% extends "main.html" %}
 
+{% block side-menu %}
+    <li><a href="{% url 'post_list' %}">Blog's posts</a></li>
+    {% if request.user.is_authenticated %}
+        <li><a href="{% url 'post_create' %}">Create new post</a></li>
+        <li><a href="{% url 'user_detail' request.user.id %}">Profile</a></li>
+        <li class="active"><a href="{% url 'profile' %}">Update profile</a></li>
+        <li><a href="{% url 'logout' %}">Log-out</a></li>
+    {% else %}
+        <li><a href="{% url 'registration' %}">Registration</a></li>
+        <li><a href="{% url 'login' %}">Login</a></li>
+    {% endif %}
+{% endblock %}
+
 {% block content %}
 
     <form method="post" class="form-group">
