--- a/templates/blog/user_detail.html
+++ b/templates/blog/user_detail.html
@@ -32,7 +32,8 @@
     <li><h4>Title: <a href="{% url 'post_detail' post.slug %}">{{ post.title }}</a> </h4></li>
     <h5>Short description: {{ post.short_description }} </h5>
     {% if self_posts %}
-    <a href="{% url 'post_delete' post.id %}"> <button class="btn btn-xs btn-danger">Delete post</button></a>
+        <a href="{% url 'post_edit' post.id %}"> <button class="btn btn-xs btn-info">Edit post</button></a>
+        <a href="{% url 'post_delete' post.id %}"> <button class="btn btn-xs btn-danger">Delete post</button></a>
     {% endif %}
 {% empty %}
     <li>No posts yet.</li>
