--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,12 +1,9 @@
 {% extends "main.html" %}
 
 {% block side-menu %}
-    <li><a href="{% url 'post_list' %}">Blog's posts</a></li>
+    <li><a href="{% url 'index' %}">Main page</a></li>
     {% if request.user.is_authenticated %}
-        <li><a href="{% url 'post_create' %}">Create new post</a></li>
-        <li><a href="{% url 'user_detail' request.user.id %}">Profile</a></li>
-        <li><a href="{% url 'profile' %}">Update profile</a></li>
-        <li><a href="{% url 'logout' %}">Log-out</a></li>
+        <li><a href="{% url 'url_shortener' %}">Create new shortcut</a></li>
     {% else %}
         <li class="active"><a href="{% url 'registration' %}">Registration</a></li>
         <li><a href="{% url 'login' %}">Login</a></li>
