--- a/templates/create_shortcut.html
+++ b/templates/create_shortcut.html
@@ -14,6 +14,10 @@
 <div class="panel panel-default">
   <div class="panel-heading">Fill original url field for creation shortcut</div>
   <div class="panel-body">
+      {% if message %}
+        <div class="alert danger">{{ message }} </div>
+      {% endif %}
+
     <form method="post">
         {% csrf_token %}
         <table>
